# ExchangeRateApp

./: CMakeLists.txt  LICENSE  README.md
include/: TimerForUpdates.h
include/Controller/: ApiController.h  CurrentExchangeService.h  ExchangeCounter.h  RequestController.h  RequestService.h
include/ExchangeData/: ExchangeData.h  MonthlyExchangeData.h
include/ExchangeDataParser/: ExchangeDataParser.h  ExchangeDataTranslator.h
include/Presentation/Widget/: ChooseExTypeWidget.h  ExchangeMainWindow.h  ExchangeWidget.h  GraphicBuilderWidget.h  InputWidget.h  InsertExAmountWidget.h  ListWidget.h  NumericExTextWidget.h  OutputExAmountWidget.h
resources/: app.rc
src/: TimerForUpdates.cpp  main.cpp
src/Controller/: ApiController.cpp  CurrentExchangeService.cpp  RequestController.cpp  RequestService.cpp
src/ExchangeDataParser/: ExchangeDataParser.cpp
src/View/Presentation/: ChooseExTypeWidget.cpp  ExchangeMainWindow.cpp  ExchangeWidget.cpp  GraphicBuilderWidget.cpp  InputWidget.cpp  InsertExAmounWidget.cpp  NumericExTextWidget.cpp  OutputExAmountWIdget.cpp  exchangewidget.ui
